<resources>
    <string name="app_name">HangIn</string>

    <!-- Main Activity -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>

    <!-- Sign Up Activity -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="back">back</string>
    <string name="error">Failed to register due to internet connection!</string>
    <string name="invalid">Invalid Username or Password!\nTry again</string>
    <string name="first_name_requirement">First Name is required</string>
    <string name="last_name_requirement">Last Name is required</string>
    <string name="email_requirement">Email is not valid</string>
    <string name="phone_requirement">Phone is required</string>
    <string name="password_requirement">Password is required</string>
    <string name="registered">Registered successfully!\nProceed to login</string>
    <string name="alert">Alert!</string>
    <string name="proceed">Proceed</string>
    <string name="congrats">Congratulations!</string>
    <string name="failed_register">Failed to register!</string>
    <string name="email_tip">(Your email address will be your username)\nFormat: Username@example.com</string>
    <string name="password_tip">Use at least 5 characters</string>
    <string name="places">Workspaces</string>
    <string name="search_tip">Search for workspace by name</string>
    <string name="search">Search</string>
    <string name="report">Report</string>
    <string name="settings">Settings</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="disconnection">No Internet Connection</string>
    <string name="tap_to_try">Tap to Try</string>

    <string name="review_fragment">REVIEWS</string>
    <string name="menu_fragment">MENU</string>
    <string name="about_fragment">ABOUT</string>
    <string name="location_fragment">LOCATION</string>


</resources>
